# elm-lsp

./: .gitignore  README.md  package.json
client/: elm.tmLanguage.json  extension.js  language-config.json
client/features/: lsp.js  semantic-highlighting.js
server/: elm-lsp.cabal  logfile.txt  request.txt  test-server.js
server/src/: Main.hs
server/src/Json/: Decode.hs  Encode.hs  Value.hs
server/src/Lsp/: DocumentUri.hs  Id.hs  Message.hs  NotificationMessage.hs  RequestMessage.hs  ResponseMessage.hs  SemanticTokensOptions.hs  Server.hs  TextDocumentIdentifier.hs
server/src/Lsp/Capabilities/: SemanticTokens.hs
server/src/Lsp/Capabilities/TextDocument/: DidChangeParams.hs  DidCloseParams.hs  DidOpenParams.hs
server/src/Lsp/Responses/: InitializeResponse.hs  InitializeResult.hs
server/src/Parser/: AST.hs  Core.hs
