cabal-version:      2.4
name:               elm-lsp
version:            0.1.0.0

author:             Ryan Haskell-Glatz
maintainer:         ryan.nhg@gmail.com

extra-source-files: CHANGELOG.md

executable elm-lsp
    main-is:          Main.hs

    other-modules:
        Json.Decode
        Json.Encode
        Json.Value

        Lsp.Capabilities.SemanticTokens
        Lsp.Capabilities.TextDocument.DidChangeParams
        Lsp.Capabilities.TextDocument.DidCloseParams
        Lsp.Capabilities.TextDocument.DidOpenParams
        Lsp.DocumentUri
        Lsp.Id
        Lsp.Message
        Lsp.NotificationMessage
        Lsp.RequestMessage
        Lsp.ResponseMessage
        Lsp.Responses.InitializeResult
        Lsp.SemanticTokensOptions
        Lsp.Server
        Lsp.TextDocumentIdentifier

        Parser.AST
        Parser.Core

    build-depends:  
        base ^>=4.17.2.1,
        stm ^>=2.5.1.0,
        aeson ^>=2.2.1.0,
        text ^>=2.0.2,
        scientific ^>=0.3.7.0,
        vector ^>=0.13.1.0,
        containers ^>=0.6.7,
        bytestring
    hs-source-dirs:   src
    default-language: Haskell2010
